--- a/View/Add/AddStudent.xaml
+++ b/View/Add/AddStudent.xaml
@@ -1,16 +1,18 @@
-﻿<Window x:Class="Database4.View.AddBook"
+﻿<Window x:Class="Database4.View.AddStudent"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:i="http://schemas.microsoft.com/xaml/behaviors" mc:Ignorable="d"
-        Title="Добавить книгу">
+        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
+        mc:Ignorable="d"
+        Title="Добавить студента">
 
     <!-- Connect static resources/styles/etc -->
     <Window.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary Source="../Resource/Style/ControlStyles.xaml"></ResourceDictionary>
-                <ResourceDictionary Source="../Resource/Style/WindowStyles.xaml"></ResourceDictionary>
+                <ResourceDictionary Source="pack://application:,,,/Resource/Style/ControlStyles.xaml"></ResourceDictionary>
+                <ResourceDictionary Source="pack://application:,,,/Resource/Style/WindowStyles.xaml"></ResourceDictionary>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Window.Resources>
@@ -33,7 +35,7 @@
 
         <!-- Header -->
         <Grid Grid.Row="0" Margin="0, 30, 0, 0">
-            <Label Grid.Row="0" HorizontalAlignment="Center" Content="Добавление книги" Style="{StaticResource AddWindow Header}"></Label>
+            <Label Grid.Row="0" HorizontalAlignment="Center" Content="Добавление студента" Style="{StaticResource AddWindow Header}"></Label>
         </Grid>
 
         <!-- Main content -->
@@ -67,16 +69,19 @@
                         <TextBlock Text="Идентификатор:"></TextBlock>
                     </Grid>
                     <Grid>
-                        <TextBlock Text="Название:"></TextBlock>
+                        <TextBlock Text="Имя:"></TextBlock>
                     </Grid>
                     <Grid>
-                        <TextBlock Text="Автор:"></TextBlock>
+                        <TextBlock Text="Фамилия:"></TextBlock>
                     </Grid>
                     <Grid>
-                        <TextBlock Text="Издание:"></TextBlock>
+                        <TextBlock Text="Отчество:"></TextBlock>
                     </Grid>
                     <Grid>
-                        <TextBlock Text="Жанр:"></TextBlock>
+                        <TextBlock Text="Город:"></TextBlock>
+                    </Grid>
+                    <Grid>
+                        <TextBlock Text="Группа:"></TextBlock>
                     </Grid>
                 </StackPanel>
 
@@ -93,15 +98,17 @@
                         <TextBox Name="Name" Text="{Binding Path=Name, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"></TextBox>
                     </Grid>
                     <Grid>
-                        <ComboBox Name="Author" ItemsSource="{Binding Path=Authors, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" SelectedIndex="{Binding Path=SelectedAuthorIndex, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}">
+                        <TextBox Name="Surname" Text="{Binding Path=Surname, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"></TextBox>
+                    </Grid>
+                    <Grid>
+                        <TextBox Name="Patronymic" Text="{Binding Path=Patronymic, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"></TextBox>
+                    </Grid>
+                    <Grid>
+                        <ComboBox Name="City" ItemsSource="{Binding Path=Cities, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" SelectedIndex="{Binding Path=SelectedCityIndex, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}">
                         </ComboBox>
                     </Grid>
                     <Grid>
-                        <ComboBox Name="Publisher" ItemsSource="{Binding Path=Publishers, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" SelectedIndex="{Binding Path=SelectedPublisherIndex, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}">
-                        </ComboBox>
-                    </Grid>
-                    <Grid>
-                        <ComboBox Name="Genre" ItemsSource="{Binding Path=Genres, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" SelectedIndex="{Binding Path=SelectedGenreIndex, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}">
+                        <ComboBox Name="Group" ItemsSource="{Binding Path=Groups, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" SelectedIndex="{Binding Path=SelectedGroupIndex, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}">
                         </ComboBox>
                     </Grid>
                 </StackPanel>
@@ -113,7 +120,7 @@
                     <StackPanel.Resources>
                         <Style TargetType="CheckBox" BasedOn="{StaticResource AddWindow CheckBox}"></Style>
                     </StackPanel.Resources>
-                    <CheckBox Padding="5, 0" Content="Активная" IsChecked="{Binding Path=IsActive, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"></CheckBox>
+                    <CheckBox Padding="5, 0" Content="Активный" IsChecked="{Binding Path=IsActive, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"></CheckBox>
                 </StackPanel>
             </Grid>
         </Grid>
