--- a/View/Add/AddSpecialty.xaml
+++ b/View/Add/AddSpecialty.xaml
@@ -1,17 +1,15 @@
-﻿<Window x:Class="Database4.View.AddLibraryTransaction"
+﻿<Window x:Class="Database4.View.AddSpecialty"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        mc:Ignorable="d"
-        Title="Выдать книгу">
-
+        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:i="http://schemas.microsoft.com/xaml/behaviors" mc:Ignorable="d"
+        Title="Добавить специальность">
     <!-- Connect static resources/styles/etc -->
     <Window.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary Source="../Resource/Style/ControlStyles.xaml"></ResourceDictionary>
-                <ResourceDictionary Source="../Resource/Style/WindowStyles.xaml"></ResourceDictionary>
+                <ResourceDictionary Source="pack://application:,,,/Resource/Style/ControlStyles.xaml"></ResourceDictionary>
+                <ResourceDictionary Source="pack://application:,,,/Resource/Style/WindowStyles.xaml"></ResourceDictionary>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Window.Resources>
@@ -34,7 +32,7 @@
 
         <!-- Header -->
         <Grid Grid.Row="0" Margin="0, 30, 0, 0">
-            <Label Grid.Row="0" HorizontalAlignment="Center" Content="Выдача книги" Style="{StaticResource AddWindow Header}"></Label>
+            <Label Grid.Row="0" HorizontalAlignment="Center" Content="Добавление специальности" Style="{StaticResource AddWindow Header}"></Label>
         </Grid>
 
         <!-- Main content -->
@@ -68,19 +66,10 @@
                         <TextBlock Text="Идентификатор:"></TextBlock>
                     </Grid>
                     <Grid>
-                        <TextBlock Text="Карта клиента:"></TextBlock>
+                        <TextBlock Text="Название специальности:"></TextBlock>
                     </Grid>
                     <Grid>
-                        <TextBlock Text="Книга:"></TextBlock>
-                    </Grid>
-                    <Grid>
-                        <TextBlock Text="Дата взятия:"></TextBlock>
-                    </Grid>
-                    <Grid>
-                        <TextBlock Text="Дата возвращения:"></TextBlock>
-                    </Grid>
-                    <Grid>
-                        <TextBlock Text="Выдал книгу:"></TextBlock>
+                        <TextBlock Text="Буква специальности:"></TextBlock>
                     </Grid>
                 </StackPanel>
 
@@ -88,46 +77,15 @@
                 <StackPanel Grid.Column="1" Margin="10,0" VerticalAlignment="Center">
                     <StackPanel.Resources>
                         <Style TargetType="TextBox" BasedOn="{StaticResource AddWindow TextBox}"></Style>
-                        <Style TargetType="ComboBox" BasedOn="{StaticResource AddWindow ComboBox}"></Style>
                     </StackPanel.Resources>
                     <Grid>
-                        <TextBox Name="ID" IsEnabled="False">0</TextBox>
-                    </Grid>
-
-                    <Grid>
-                        <ComboBox Name="ClientCard">
-                            <ComboBoxItem>
-                                Киев
-                            </ComboBoxItem>
-                            <ComboBoxItem>
-                                Казань
-                            </ComboBoxItem>
-                            <ComboBoxItem>
-                                Прага
-                            </ComboBoxItem>
-                        </ComboBox>
+                        <TextBox Name="ID" Text="{Binding Path=Id, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" IsEnabled="False"></TextBox>
                     </Grid>
                     <Grid>
-                        <ComboBox Name="Book">
-                            <ComboBoxItem>
-                                Кафедра 1
-                            </ComboBoxItem>
-                            <ComboBoxItem>
-                                Кафедра 2
-                            </ComboBoxItem>
-                            <ComboBoxItem>
-                                Кафедра 3
-                            </ComboBoxItem>
-                        </ComboBox>
+                        <TextBox Name="Name" Text="{Binding Path=Name, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"></TextBox>
                     </Grid>
                     <Grid>
-                        <DatePicker Name="TakeDate" FontFamily="{StaticResource Grandview Regular}" FontSize="10" Height="20" Margin="0, 0, 0, 10" ></DatePicker>
-                    </Grid>
-                    <Grid>
-                        <DatePicker Name="ReturnDate" FontFamily="{StaticResource Grandview Regular}" FontSize="10" Height="20" Width="100" Margin="0, 0, 0, 10"></DatePicker>
-                    </Grid>
-                    <Grid>
-                        <TextBox IsEnabled="False">Я каменщик</TextBox>
+                        <TextBox Name="ShortLetter" Text="{Binding Path=ShortLetter, UpdateSourceTrigger=PropertyChanged}"></TextBox>
                     </Grid>
                 </StackPanel>
             </Grid>
@@ -138,7 +96,7 @@
                     <StackPanel.Resources>
                         <Style TargetType="CheckBox" BasedOn="{StaticResource AddWindow CheckBox}"></Style>
                     </StackPanel.Resources>
-                    <CheckBox Padding="5, 0" Content="Активная"></CheckBox>
+                    <CheckBox Padding="5, 0" Content="Активная" IsChecked="{Binding Path=IsActive, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"></CheckBox>
                 </StackPanel>
             </Grid>
         </Grid>
@@ -146,8 +104,15 @@
         <!-- Bottom buttons -->
         <Grid Grid.Row="2" Margin="10">
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
-                <Button Name="Cancel" Style="{StaticResource AddWindow Cancel Button}"></Button>
-                <Button Name="Add" Style="{StaticResource AddWindow Add Button}"></Button>
+                <Button Name="Cancel" Style="{StaticResource AddWindow Cancel Button}">
+                    <i:Interaction.Triggers>
+                        <i:EventTrigger EventName="Click">
+                            <i:CallMethodAction MethodName="Close" TargetObject="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=Window}}">
+                            </i:CallMethodAction>
+                        </i:EventTrigger>
+                    </i:Interaction.Triggers>
+                </Button>
+                <Button Name="Add" Style="{StaticResource AddWindow Add Button}" Command="{Binding Path=AddCommand}"></Button>
             </StackPanel>
         </Grid>
     </Grid>
