--- a/View/Admin/AdminWindow.xaml
+++ b/View/Admin/AdminWindow.xaml
@@ -2,21 +2,35 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:viewmodel="clr-namespace:Database4.ViewModel" mc:Ignorable="d"
+        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        mc:Ignorable="d"
         xmlns:dgx ="urn:tom-englert.de/DataGridExtensions"
+        xmlns:local="clr-namespace:Database4.Converter.GetControlHeader"
+        xmlns:g="clr-namespace:Database4.Converter.GetButtonStateByHeader"
+        xmlns:c="clr-namespace:Database4.Converter.ConvertBooleanToVisibility"
         Title="{Binding Path=Title}"
-        Height="478" Width="800">
+        Height="500" Width="850"
+        WindowStyle="ThreeDBorderWindow"
+        WindowState="Maximized"
+        Name="Admin">
 
+    <!-- Window's styles and converters -->
     <Window.Resources>
-        <ResourceDictionary Source="../Resource/Font/Fonts.xaml" />
+        <ResourceDictionary>
+            <!-- Loading of resource dictionaries -->
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="pack://application:,,,/Resource/Font/Fonts.xaml"></ResourceDictionary>
+                <ResourceDictionary Source="pack://application:,,,/Resource/Style/ControlStyles.xaml"></ResourceDictionary>
+            </ResourceDictionary.MergedDictionaries>
+            <!-- Converters -->
+            <local:GetControlHeader x:Key="getControlHeader"></local:GetControlHeader>
+            <g:GetButtonStateByHeader x:Key="getButtonStateByHeader"></g:GetButtonStateByHeader>
+            <c:ConvertBooleanToVisibility x:Key="convertBooleanToVisibility"></c:ConvertBooleanToVisibility>
+        </ResourceDictionary>
     </Window.Resources>
 
-    <Window.DataContext>
-        <viewmodel:AdminViewModel></viewmodel:AdminViewModel>
-    </Window.DataContext>
 
     <Grid>
-        
         <Grid.RowDefinitions>
             <RowDefinition Height="*"></RowDefinition>
             <RowDefinition Height="50"></RowDefinition>
@@ -24,14 +38,24 @@
 
         <!-- Tab controls for table choose -->
         <!-- TODO: make dynamic count of tab items -->
-        <TabControl Grid.Row="0" FontFamily="{StaticResource Grandview Regular}" FontSize="16" SelectedIndex="5">
-            <TabControl.ItemTemplate>
-                <DataTemplate>
-                    <HeaderedContentControl Header="{Binding Path=SelectedTab}" />
-                </DataTemplate>
-            </TabControl.ItemTemplate>
-            <!-- Authors panel !-->
-            <TabItem Name="Authors" Header="{Binding RelativeSource={RelativeSource Self}, Path=Name}">
+        <TabControl Grid.Row="0" FontFamily="{StaticResource Grandview Regular}" FontSize="16" SelectedItem="{Binding Mode=OneWayToSource, Path=SelectedTab, Converter={StaticResource getControlHeader}}">
+            <TabItem IsSelected="True" Header="" Visibility="Collapsed">
+                  <!-- There's nothing here -->  
+            </TabItem>
+
+            <TabItem Name="ClientCards" Header="{Binding Path=ClientCardsTableName, Mode=OneTime}">
+                <DataGrid dgx:DataGridFilter.IsAutoFilterEnabled="True" CanUserSortColumns="True" CanUserDeleteRows="True" CanUserAddRows="True" IsReadOnly="True" ItemsSource="{Binding Path=ClientCards, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" SelectedItem="{Binding Path=SelectedClientCard, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" SelectionMode="Single" AutoGenerateColumns="True">
+
+                </DataGrid>
+            </TabItem>
+
+            <TabItem Name="LibraryTransactions" Header="{Binding Path=LibraryTransactionsTableName, Mode=OneTime}">
+                <DataGrid dgx:DataGridFilter.IsAutoFilterEnabled="True" CanUserSortColumns="True" CanUserDeleteRows="True" CanUserAddRows="True" IsReadOnly="True" ItemsSource="{Binding Path=LibraryTransactions, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" SelectedItem="{Binding Path=SelectedLibraryTransaction, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" SelectionMode="Single" AutoGenerateColumns="True">
+
+                </DataGrid>
+            </TabItem>
+
+            <TabItem Name="Authors" Header="{Binding Path=AuthorsTableName, Mode=OneTime}" Visibility="{Binding Path=IsAdmin, Mode=OneWay, UpdateSourceTrigger=PropertyChanged, Converter={StaticResource ResourceKey=convertBooleanToVisibility}}">
                 <DataGrid dgx:DataGridFilter.IsAutoFilterEnabled="True"
                           CanUserSortColumns="True"
                           CanUserDeleteRows="True"
@@ -44,8 +68,8 @@
 
                 </DataGrid>
             </TabItem>
-        
-            <TabItem Name="Books" Header="{Binding RelativeSource={RelativeSource Self}, Path=Name}">
+
+            <TabItem Name="Books" Header="{Binding Path=BooksTableName, Mode=OneTime}" Visibility="{Binding Path=IsAdmin, Mode=OneWay, UpdateSourceTrigger=PropertyChanged, Converter={StaticResource ResourceKey=convertBooleanToVisibility}}">
                 <DataGrid dgx:DataGridFilter.IsAutoFilterEnabled="True"
                           CanUserSortColumns="True"
                           CanUserDeleteRows="True"
@@ -58,8 +82,8 @@
 
                 </DataGrid>
             </TabItem>
-            
-            <TabItem Name="Cathedras" Header="{Binding RelativeSource={RelativeSource Self}, Path=Name}">
+
+            <TabItem Name="Cathedras" Header="{Binding Path=CathedrasTableName, Mode=OneTime}" Visibility="{Binding Path=IsAdmin, Mode=OneWay, UpdateSourceTrigger=PropertyChanged, Converter={StaticResource ResourceKey=convertBooleanToVisibility}}">
                 <DataGrid dgx:DataGridFilter.IsAutoFilterEnabled="True"
                           CanUserSortColumns="True"
                           CanUserDeleteRows="True"
@@ -72,28 +96,14 @@
 
                 </DataGrid>
             </TabItem>
-            
-            <TabItem Name="Cities" Header="{Binding RelativeSource={RelativeSource Self}, Path=Name}">
-                <DataGrid dgx:DataGridFilter.IsAutoFilterEnabled="True"
-                          CanUserSortColumns="True"
-                          CanUserDeleteRows="True"
-                          CanUserAddRows="True"
-                          IsReadOnly="True"
-                          ItemsSource="{Binding Path=Cities, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-                          SelectedItem="{Binding Path=SelectedCity, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-                          SelectionMode="Single"
-                          AutoGenerateColumns="True">
+
+            <TabItem Name="Cities" Header="{Binding Path=CitiesTableName, Mode=OneTime}" Visibility="{Binding Path=IsAdmin, Mode=OneWay, UpdateSourceTrigger=PropertyChanged, Converter={StaticResource ResourceKey=convertBooleanToVisibility}}">
+                <DataGrid dgx:DataGridFilter.IsAutoFilterEnabled="True" CanUserSortColumns="True" CanUserDeleteRows="True" CanUserAddRows="True" IsReadOnly="True" ItemsSource="{Binding Path=Cities, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" SelectedItem="{Binding Path=SelectedCity, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" SelectionMode="Single" AutoGenerateColumns="True">
 
                 </DataGrid>
             </TabItem>
 
-            <TabItem Name="ClientCards" Header="{Binding RelativeSource={RelativeSource Self}, Path=Name}">
-                <DataGrid AutoGenerateColumns="True">
-
-                </DataGrid>
-            </TabItem>
-
-            <TabItem Name="Countries" Header="{Binding RelativeSource={RelativeSource Self}, Path=Name}">
+            <TabItem Name="Countries" Header="{Binding Path=CountriesTableName, Mode=OneTime}" Visibility="{Binding Path=IsAdmin, Mode=OneWay, UpdateSourceTrigger=PropertyChanged, Converter={StaticResource ResourceKey=convertBooleanToVisibility}}">
                 <DataGrid dgx:DataGridFilter.IsAutoFilterEnabled="True"
                           CanUserSortColumns="True"
                           CanUserDeleteRows="True"
@@ -107,7 +117,7 @@
                 </DataGrid>
             </TabItem>
 
-            <TabItem Name="Degrees" Header="{Binding RelativeSource={RelativeSource Self}, Path=Name}">
+            <TabItem Name="Degrees" Header="{Binding Path=DegreesTableName, Mode=OneTime}" Visibility="{Binding Path=IsAdmin, Mode=OneWay, UpdateSourceTrigger=PropertyChanged, Converter={StaticResource ResourceKey=convertBooleanToVisibility}}">
                 <DataGrid dgx:DataGridFilter.IsAutoFilterEnabled="True"
                           CanUserSortColumns="True"
                           CanUserDeleteRows="True"
@@ -121,7 +131,7 @@
                 </DataGrid>
             </TabItem>
 
-            <TabItem Name="Faculties" Header="{Binding RelativeSource={RelativeSource Self}, Path=Name}">
+            <TabItem Name="Faculties" Header="{Binding Path=FacultiesTableName, Mode=OneTime}" Visibility="{Binding Path=IsAdmin, Mode=OneWay, UpdateSourceTrigger=PropertyChanged, Converter={StaticResource ResourceKey=convertBooleanToVisibility}}">
                 <DataGrid dgx:DataGridFilter.IsAutoFilterEnabled="True"
                           CanUserSortColumns="True"
                           CanUserDeleteRows="True"
@@ -135,7 +145,7 @@
                 </DataGrid>
             </TabItem>
 
-            <TabItem Name="FacultiesAndSpecialties" Header="{Binding RelativeSource={RelativeSource Self}, Path=Name}">
+            <TabItem Name="FacultiesAndSpecialties" Header="{Binding Path=FacultiesAndSpecialtiesTableName, Mode=OneTime}" Visibility="{Binding Path=IsAdmin, Mode=OneWay, UpdateSourceTrigger=PropertyChanged, Converter={StaticResource ResourceKey=convertBooleanToVisibility}}">
                 <DataGrid dgx:DataGridFilter.IsAutoFilterEnabled="True"
                           CanUserSortColumns="True"
                           CanUserDeleteRows="True"
@@ -149,7 +159,7 @@
                 </DataGrid>
             </TabItem>
 
-            <TabItem Name="FacultiesAndSpecialtiesAndCathedras" Header="{Binding RelativeSource={RelativeSource Self}, Path=Name}">
+            <TabItem Name="FacultiesAndSpecialtiesAndCathedras" Header="{Binding Path=FacultiesAndSpecialtiesAndCathedrasTableName, Mode=OneTime}" Visibility="{Binding Path=IsAdmin, Mode=OneWay, UpdateSourceTrigger=PropertyChanged, Converter={StaticResource ResourceKey=convertBooleanToVisibility}}">
                 <DataGrid dgx:DataGridFilter.IsAutoFilterEnabled="True"
                           CanUserSortColumns="True"
                           CanUserDeleteRows="True"
@@ -163,7 +173,7 @@
                 </DataGrid>
             </TabItem>
 
-            <TabItem Name="Genres" Header="{Binding RelativeSource={RelativeSource Self}, Path=Name, UpdateSourceTrigger=LostFocus}">
+            <TabItem Name="Genres" Header="{Binding Path=GenresTableName, Mode=OneTime}" Visibility="{Binding Path=IsAdmin, Mode=OneWay, UpdateSourceTrigger=PropertyChanged, Converter={StaticResource ResourceKey=convertBooleanToVisibility}}">
                 <DataGrid dgx:DataGridFilter.IsAutoFilterEnabled="True"
                           CanUserSortColumns="True"
                           CanUserDeleteRows="True"
@@ -176,28 +186,14 @@
 
                 </DataGrid>
             </TabItem>
-            
-            <TabItem Name="Groups" Header="{Binding RelativeSource={RelativeSource Self}, Path=Name}">
-                <DataGrid dgx:DataGridFilter.IsAutoFilterEnabled="True"
-                          CanUserSortColumns="True"
-                          CanUserDeleteRows="True"
-                          CanUserAddRows="True"
-                          IsReadOnly="True"
-                          ItemsSource="{Binding Path=Groups, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-                          SelectedItem="{Binding Path=SelectedGroup, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-                          SelectionMode="Single"
-                          AutoGenerateColumns="True">
+
+            <TabItem Name="Groups" Header="{Binding Path=GroupsTableName, Mode=OneTime}" Visibility="{Binding Path=IsAdmin, Mode=OneWay, UpdateSourceTrigger=PropertyChanged, Converter={StaticResource ResourceKey=convertBooleanToVisibility}}">
+                <DataGrid dgx:DataGridFilter.IsAutoFilterEnabled="True" CanUserSortColumns="True" CanUserDeleteRows="True" CanUserAddRows="True" IsReadOnly="True" ItemsSource="{Binding Path=Groups, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" SelectedItem="{Binding Path=SelectedGroup, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" SelectionMode="Single" AutoGenerateColumns="True">
 
                 </DataGrid>
             </TabItem>
-            
-            <TabItem Name="LibraryTransactions" Header="{Binding RelativeSource={RelativeSource Self}, Path=Name}">
-                <DataGrid AutoGenerateColumns="True">
 
-                </DataGrid>
-            </TabItem>
-            
-            <TabItem Name="Publishers" Header="{Binding RelativeSource={RelativeSource Self}, Path=Name}">
+            <TabItem Name="Publishers" Header="{Binding Path=PublishersTableName, Mode=OneTime}" Visibility="{Binding Path=IsAdmin, Mode=OneWay, UpdateSourceTrigger=PropertyChanged, Converter={StaticResource ResourceKey=convertBooleanToVisibility}}">
                 <DataGrid dgx:DataGridFilter.IsAutoFilterEnabled="True"
                           CanUserSortColumns="True"
                           CanUserDeleteRows="True"
@@ -210,8 +206,8 @@
 
                 </DataGrid>
             </TabItem>
-            
-            <TabItem Name="Specialties" Header="{Binding RelativeSource={RelativeSource Self}, Path=Name}">
+
+            <TabItem Name="Specialties" Header="{Binding Path=SpecialtiesTableName, Mode=OneTime}" Visibility="{Binding Path=IsAdmin, Mode=OneWay, UpdateSourceTrigger=PropertyChanged, Converter={StaticResource ResourceKey=convertBooleanToVisibility}}">
                 <DataGrid dgx:DataGridFilter.IsAutoFilterEnabled="True"
                           CanUserSortColumns="True"
                           CanUserDeleteRows="True"
@@ -224,8 +220,8 @@
 
                 </DataGrid>
             </TabItem>
-            
-            <TabItem Name="Students" Header="{Binding RelativeSource={RelativeSource Self}, Path=Name}">
+
+            <TabItem Name="Students" Header="{Binding Path=StudentsTableName, Mode=OneTime}" Visibility="{Binding Path=IsAdmin, Mode=OneWay, UpdateSourceTrigger=PropertyChanged, Converter={StaticResource ResourceKey=convertBooleanToVisibility}}">
                 <DataGrid dgx:DataGridFilter.IsAutoFilterEnabled="True"
                           CanUserSortColumns="True"
                           CanUserDeleteRows="True"
@@ -238,9 +234,9 @@
 
                 </DataGrid>
             </TabItem>
-            
-            <TabItem Name="Teachers" Header="{Binding RelativeSource={RelativeSource Self}, Path=Name}">
-                <DataGrid  dgx:DataGridFilter.IsAutoFilterEnabled="True"
+
+            <TabItem Name="Teachers" Header="{Binding Path=TeachersTableName, Mode=OneTime}" Visibility="{Binding Path=IsAdmin, Mode=OneWay, UpdateSourceTrigger=PropertyChanged, Converter={StaticResource ResourceKey=convertBooleanToVisibility}}">
+                <DataGrid dgx:DataGridFilter.IsAutoFilterEnabled="True"
                           CanUserSortColumns="True"
                           CanUserDeleteRows="True"
                           CanUserAddRows="True"
@@ -252,8 +248,8 @@
 
                 </DataGrid>
             </TabItem>
-            
-            <TabItem Name="Workers" Header="{Binding RelativeSource={RelativeSource Self}, Path=Name}">
+
+            <TabItem Name="Workers" Header="{Binding Path=WorkersTableName, Mode=OneTime}" Visibility="{Binding Path=IsAdmin, Mode=OneWay, UpdateSourceTrigger=PropertyChanged, Converter={StaticResource ResourceKey=convertBooleanToVisibility}}">
                 <DataGrid dgx:DataGridFilter.IsAutoFilterEnabled="True"
                           CanUserSortColumns="True"
                           CanUserDeleteRows="True"
@@ -272,8 +268,11 @@
         <StackPanel Grid.Row="1" Orientation="Horizontal" HorizontalAlignment="Right">
             <Button Content="{Binding Path=AddButtonText}" Width="110" Margin="5, 10" Padding="5" FontSize="12" FontFamily="{StaticResource Grandview Regular}" Command="{Binding Path=AddCommand}"></Button>
             <Button Content="{Binding Path=EditButtonText}" Width="110" Margin="5, 10" Padding="5" FontSize="12" FontFamily="{StaticResource Grandview Regular}" Command="{Binding Path=EditCommand}"></Button>
-            <Button Content="{Binding Path=DeleteButtonText}" Width="110" Margin="5, 10" Padding="5" FontSize="12" FontFamily="{StaticResource Grandview Regular}" Command="{Binding Path=DeleteCommand}"></Button>
+            <Button Content="{Binding Path=CloseButtonText}" Width="110" Margin="5, 10" Padding="5" FontSize="12" FontFamily="{StaticResource Grandview Regular}" Command="{Binding Path=CloseCommand}" Visibility="{Binding Path=SelectedTab, Mode=OneWay, UpdateSourceTrigger=PropertyChanged, Converter={StaticResource ResourceKey=getButtonStateByHeader}}"></Button>
+            <Button Content="{Binding Path=DeleteButtonText}" Width="110" Margin="5, 10" Padding="5" FontSize="12" FontFamily="{StaticResource Grandview Regular}" Command="{Binding Path=DeleteCommand}" Visibility="{Binding Path=IsAdmin, Mode=OneWay, UpdateSourceTrigger=PropertyChanged, Converter={StaticResource ResourceKey=convertBooleanToVisibility}}"></Button>
             <Button Content="{Binding Path=UpdateButtonText}" Width="110" Margin="5, 10" Padding="5" FontSize="12" FontFamily="{StaticResource Grandview Regular}" Command="{Binding Path=UpdateCommand}"></Button>
+            <Button Content="{Binding Path=ExitButtonText}" Width="110" Margin="5, 10" Padding="5" FontSize="12" FontFamily="{StaticResource Grandview Regular}" Command="{Binding Path=ExitCommand}" CommandParameter="{Binding ElementName=Admin}"></Button>
         </StackPanel>
     </Grid>
+
 </Window>
